--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -14,7 +14,7 @@
         Aucune série trouvée.
     {% endfor %}
 
-    <a href="{{ path('program_index') }}">
-        Retour à la liste des programmes
+    <a href="{{ path('category_index') }}">
+        Retour à la liste des catégories
     </a>
 {% endblock %}
