--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -6,16 +6,15 @@
     <h1>Toutes les catégories de série : </h1>
         {% for category in categories %}
 
-        <div>
-            <h2>{{ loop.index }} / {{ category.Name }}</h2>
+        <div class = "liencategory">
+            <a href="{{ path("category_show", { categoryName: category.Name }) }}"><h2 class ="titrecategory">{{ category.Name }}</h2></a>
             {# Lien vers les séries correspondant à la catégorie choisie : #}
-            <a href="{{ path("category_show", { categoryName: category.Name }) }}">Voir les séries</a>
         </div>
     {% else %}
         Aucune catégorie correspondante n'a été trouvée.
     {% endfor %}
 
-    <a href="{{ path('app_index') }}">
+    <a class = "button" href="{{ path('app_index') }}">
         Retour à l'accueil
     </a>
 {% endblock %}
