--- a/templates/program/program.html.twig
+++ b/templates/program/program.html.twig
@@ -1,10 +1,19 @@
-<!doctype html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <title>Wild Series</title>
-</head>
-<body>
-   <h1>{{ website }} index</h1>
-</body>
-</html>
+{% extends 'base.html.twig' %}
+
+{% block title %}All programs{% endblock %}
+
+{% block body %}
+    <h1>Toutes les séries de la table program : </h1>
+        {% for program in programs %}
+        <div>
+            <h2 href="{{ path("program_show", { id: program.id }) }}"><img class="poster" href="{{ path("program_show", { id: program.id }) }}" src="{{program.poster}}" alt="{{ program.title }}" ></h2>
+            {# Lien vers la fiche de la série : #}
+        </div>
+    {% else %}
+        Aucune série trouvée.
+    {% endfor %}
+
+    <a class = "button" href="{{ path('app_index') }}">
+        Retour à l'accueil
+    </a>
+{% endblock %}
