ajout des param converter

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
             <nav>
                 <div class ="entête">
                     <a class = "nomdutilisateur" >👨‍💻 John Doe</a>
-                    <a class = "marque" href="/">Wild-Series</a>
+                    <a class = "marque" href="{{ path('app_index') }}">Wild-Series</a>
                     <div><a class = "button">Déconnexion</a></div>
                 </div>
             </nav>
