--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,12 +3,10 @@
 {% block title %}Séries de la catégorie {{ category.name }} {% endblock %}
 
 {% block body %}
-      {% for program in programs %}
+     {% for program in programs %}
         <div>
-            <h2>{{ loop.index }} / {{ program.title }}</h2>
-            <p>{{ program.summary }}</p>
+            <a  href="{{ path("program_show", { program: program.id }) }}"><img class="poster" src="{{program.poster}}" alt="{{ program.title }}" ></a>
             {# Lien vers la fiche de la série : #}
-            <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
         </div>
     {% else %}
         Aucune série trouvée.
