add 2 forms to add program or category

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,8 @@
                 <ul class = "menu">
                     <li><a href="/category/">Catégories</a></li>
                     <li><a href="/program/">Séries</a></li>
+                    <li><a href="/new_category/">Ajouter une catégorie</a><li>
+                    <li><a href="/new_program/">Ajouter une série</a><li>
                 </ul>
             </nav>
         </header>
