--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -21,6 +21,16 @@
             {% endfor %}
             </div>
     </div>
+            <div>
+                <strong>Acteurs :</strong>
+                    <ul>
+                        {% for actor in program.actors %}
+                            <li>{{ actor.name }} </li>
+                        {% else %}
+                            <li>Aucun acteur pour cette série</li>
+                        {% endfor %}
+                    </ul>
+            </div>
 
     <a href="{{ path('program_index') }}">
         Retour à la liste des programmes
